--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.2.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.11",
     "@mui/material": "^5.11.11",
     "@mui/styled-engine-sc": "^5.11.11",
     "@next/font": "13.2.3",
+    "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.26.0",
     "@trpc/client": "^10.14.0",
     "@trpc/next": "^10.14.0",
@@ -25,7 +27,10 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.3",
+    "next-auth": "^4.20.1",
+    "prisma": "^4.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.8",
