--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:9252@localhost:5432/ClinicSystem?schema=public"
+VERCEL_URL="https://vercel.com/docs/concepts/projects/environment-variables#system-environment-variables"
+JWT_SECRET="super-secret"
