--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.11",
+    "@iconify/react": "^4.1.0",
     "@mui/material": "^5.11.11",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.2.3",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.26.0",
@@ -22,19 +24,24 @@
     "@trpc/next": "^10.14.0",
     "@trpc/react-query": "^10.14.0",
     "@trpc/server": "^10.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "argon2": "^0.30.3",
+    "bcrypt": "^5.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
-    "prisma": "^4.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.8",
     "typescript": "4.9.5",
     "zod": "^3.21.0"
+  },
+  "devDependencies": {
+    "prisma": "^4.11.0"
   }
 }
