--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.8",
+    "superjson": "^1.12.2",
     "typescript": "4.9.5",
     "zod": "^3.21.0"
   },
