--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:9252@localhost:5432/ClinicSystem?schema=public"
+DATABASE_URL="postgresql://postgres:9252@localhost:5432/clinicsystem?schema=public"
 VERCEL_URL="https://vercel.com/docs/concepts/projects/environment-variables#system-environment-variables"
 JWT_SECRET="super-secret"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
