--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/react-query": "^10.14.0",
     "@trpc/server": "^10.14.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
