--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.11",
     "@iconify/react": "^4.1.0",
-    "@mui/material": "^5.11.11",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.122",
+    "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.2.3",
@@ -38,6 +40,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.8",
+    "superjson": "^1.12.2",
     "typescript": "4.9.5",
     "zod": "^3.21.0"
   },
