--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.2.2",
+    "@casl/ability": "^6.3.3",
+    "@casl/react": "^3.1.0",
     "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.11",
     "@iconify/react": "^4.1.0",
@@ -22,6 +25,7 @@
     "@next/font": "13.2.3",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.26.0",
+    "@tanstack/react-query-devtools": "^4.26.1",
     "@trpc/client": "^10.14.0",
     "@trpc/next": "^10.14.0",
     "@trpc/react-query": "^10.14.0",
@@ -33,17 +37,25 @@
     "@types/react-dom": "18.0.11",
     "argon2": "^0.30.3",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.29.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-i18next": "^12.2.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-popper": "^2.3.0",
     "styled-components": "^5.3.8",
+    "stylis-plugin-rtl": "^2.1.1",
     "superjson": "^1.12.2",
     "typescript": "4.9.5",
-    "zod": "^3.21.0"
+    "zod": "^3.21.0",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "prisma": "^4.11.0"
