--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "18.0.11",
     "argon2": "^0.30.3",
     "bcrypt": "^5.1.0",
+    "clipboard-copy": "^4.0.1",
     "date-fns": "^2.29.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
@@ -44,7 +45,10 @@
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "nprogress": "^0.2.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
@@ -58,6 +62,8 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.0",
+    "@types/react-datepicker": "^4.10.0",
     "prisma": "^4.11.0"
   }
 }
