--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next/font": "13.2.3",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.26.0",
+    "@tanstack/react-query-devtools": "^4.26.1",
     "@trpc/client": "^10.14.0",
     "@trpc/next": "^10.14.0",
     "@trpc/react-query": "^10.14.0",
@@ -42,6 +43,7 @@
     "react-dom": "18.2.0",
     "styled-components": "^5.3.8",
     "superjson": "^1.12.2",
+    "trpc-client-devtools-link": "^0.2.1-next",
     "typescript": "4.9.5",
     "zod": "^3.21.0"
   },
