--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/lab": "^5.0.0-alpha.122",
     "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/x-date-pickers": "^6.0.2",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.2.3",
     "@prisma/client": "^4.11.0",
@@ -42,6 +43,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "nprogress": "^0.2.0",
