--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "age-calculator": "^1.0.0",
     "argon2": "^0.30.3",
     "bcrypt": "^5.1.0",
     "clipboard-copy": "^4.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "fast-deep-equal": "^3.1.3",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
@@ -66,6 +69,7 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "@types/nprogress": "^0.2.0",
     "@types/prismjs": "^1.26.0",
     "@types/react-datepicker": "^4.10.0",
