--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "@types/nprogress": "^0.2.0",
     "@types/prismjs": "^1.26.0",
     "@types/react-datepicker": "^4.10.0",
