--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.2.2",
-    "@casl/ability": "^6.3.3",
+    "@casl/ability": "^6.4.0",
     "@casl/react": "^3.1.0",
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
@@ -50,6 +50,7 @@
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "nprogress": "^0.2.0",
+    "prisma-zod-generator": "^0.8.11",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
