--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.2.3",
     "@prisma/client": "^4.11.0",
+    "@react-pdf/renderer": "^3.1.9",
     "@tanstack/react-query": "^4.26.0",
     "@tanstack/react-query-devtools": "^4.26.1",
     "@trpc/client": "^10.14.0",
