--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "stylis-plugin-rtl": "^2.1.1",
     "superjson": "^1.12.2",
     "trpc-client-devtools-link": "^0.2.1-next",
+    "trpc-openapi": "^1.1.2",
     "typescript": "4.9.5",
-    "zod": "^3.21.0",
+    "zod": "^3.21.4",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
